cf_analysis_results/checkerframework_results/url29ae058134_yuriy_chumak_jatha_tgz-pJ8-org_jatha_LispJ8.txt
../../../../datasets/june2020_dataset/url29ae058134_yuriy_chumak_jatha_tgz-pJ8-org_jatha_LispJ8/src/org/jatha/compile/LispCompiler.java:269: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-553 $$ java.io.InputStream $$ regular method exit $$ ( 9201, 9264 ) $$ @MustCall method close may not have been invoked on temp-var-553 or any of its aliases.
						classLoader.getResourceAsStream(pkg.replace('.', '/') + module)
						                               ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url29ae058134_yuriy_chumak_jatha_tgz-pJ8-org_jatha_LispJ8/src/org/jatha/read/LispParser.java:148: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-1222 $$ java.io.PushbackReader $$ regular method exit $$ ( 5034, 5062 ) $$ @MustCall method close may not have been invoked on temp-var-1222 or any of its aliases.
			inputReader   = new PushbackReader(inStream);
			                ^
  The type of object is: java.io.PushbackReader.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url29ae058134_yuriy_chumak_jatha_tgz-pJ8-org_jatha_LispJ8/src/org/jatha/read/LispParser.java:209: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-1228 $$ java.io.PushbackReader $$ regular method exit $$ ( 6400, 6439 ) $$ @MustCall method close may not have been invoked on temp-var-1228 or any of its aliases.
    this.inputReader = new PushbackReader(new StringReader(s));
                       ^
  The type of object is: java.io.PushbackReader.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url29ae058134_yuriy_chumak_jatha_tgz-pJ8-org_jatha_LispJ8/src/org/jatha/Lisp.java:384: error: (required.method.not.called) $$ 4 $$ method close $$ jarFile $$ java.util.jar.JarFile $$ regular method exit $$ ( 11179, 11224 ) $$ @MustCall method close may not have been invoked on jarFile or any of its aliases.
      JarFile jarFile = new JarFile(jarFileString);
              ^
  The type of object is: java.util.jar.JarFile.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url29ae058134_yuriy_chumak_jatha_tgz-pJ8-org_jatha_LispJ8/src/org/jatha/Lisp.java:389: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-1399 $$ java.io.InputStream $$ possible exceptional exit due to jarFile.close() with exception type java.io.IOException $$ ( 11371, 11397 ) $$ @MustCall method close may not have been invoked on temp-var-1399 or any of its aliases.
      LispValue result = load(new InputStreamReader(jarFile.getInputStream(je)));
                                                                          ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: possible exceptional exit due to jarFile.close() with exception type java.io.IOException
../../../../datasets/june2020_dataset/url29ae058134_yuriy_chumak_jatha_tgz-pJ8-org_jatha_LispJ8/src/org/jatha/Lisp.java:429: error: (required.method.not.called) $$ 4 $$ method close $$ resourceStream $$ java.io.InputStream $$ regular method exit $$ ( 12859, 12954 ) $$ @MustCall method close may not have been invoked on resourceStream or any of its aliases.
    InputStream resourceStream =
                ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url29ae058134_yuriy_chumak_jatha_tgz-pJ8-org_jatha_LispJ8/src/org/jatha/Lisp.java:777: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-1489 $$ java.io.FileReader $$ regular method exit $$ ( 21538, 21562 ) $$ @MustCall method close may not have been invoked on temp-var-1489 or any of its aliases.
      return load(new FileReader(filename));
                  ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url29ae058134_yuriy_chumak_jatha_tgz-pJ8-org_jatha_LispJ8/src/org/jatha/extras/SETF.java:54: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-1683 $$ java.io.InputStream $$ regular method exit $$ ( 1614, 1745 ) $$ @MustCall method close may not have been invoked on temp-var-1683 or any of its aliases.
					SETF.class.getClassLoader().getResourceAsStream(
					                                               ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url29ae058134_yuriy_chumak_jatha_tgz-pJ8-org_jatha_LispJ8/src/org/jatha/extras/FUNCTION.java:205: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-1743 $$ java.io.InputStream $$ regular method exit $$ ( 6147, 6290 ) $$ @MustCall method close may not have been invoked on temp-var-1743 or any of its aliases.
					FUNCTION.class.getClassLoader().getResourceAsStream(
					                                                   ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url29ae058134_yuriy_chumak_jatha_tgz-pJ8-org_jatha_LispJ8/src/org/jatha/Tests.java:49: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-2445 $$ java.io.InputStream $$ regular method exit $$ ( 1570, 1634 ) $$ @MustCall method close may not have been invoked on temp-var-2445 or any of its aliases.
					Tests.class.getClassLoader().getResourceAsStream(TESTS + "/NIL")
					                                                ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url29ae058134_yuriy_chumak_jatha_tgz-pJ8-org_jatha_LispJ8/src/org/jatha/Tests.java:83: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-2463 $$ java.io.InputStream $$ regular method exit $$ ( 2420, 2502 ) $$ @MustCall method close may not have been invoked on temp-var-2463 or any of its aliases.
						Tests.class.getClassLoader().getResourceAsStream(TESTS + "/" + filename.getName())
						                                                ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: regular method exit
11 errors
